# corinth-canal

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml
docs/experiments/: 01_semantic_latent_calibration.md
examples/: csv_replay.rs  gpu_smoke_test.rs  saaq_latent_calibration.rs  synapse_diagnostic.rs  telemetry_bridge.rs
examples/support/: config.rs  mod.rs  observability.rs
manifests/: known_good_runs.md
scripts/observability/: newrelic_event.sh
src/: error.rs  funnel.rs  heartbeat.rs  latent.rs  lib.rs  projector.rs  telemetry.rs  types.rs
src/gpu/kernels/: common.cuh  myelin_shim.cu  myelin_shim.h  spiking_network.cu
src/gpu/wrappers/: accelerator.rs  context.rs  ffi.rs  kernel.rs  memory.rs  mod.rs
src/hybrid/: hybrid.rs  mod.rs  olmoe.rs  projector.rs
src/model/: core.rs  mod.rs  telemetry_io.rs  temporal.rs
src/moe/: adapter.rs  checkpoint.rs  mod.rs  routing.rs
src/tensor/: mod.rs
src/transformer/: mod.rs
